--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "setup": "yarn install && cd ios && pod install && cd .."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/routers": "^6.1.1",
+    "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.2",
+    "react-native-device-info": "^10.0.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-vector-icons": "^9.2.0",
